implement updateTeam route
