# lib/units/api/controllers/teams.js
@@ -31,17 +31,47 @@ async function createTeam(req, res) {
         groups = []
     }
 
-    const existingTeams = await dbapi.getTeamByName(teamName)
-    if (existingTeams) {
-        return apiutil.respond(res, 400, 'Team with this name already exists')
-    }
-
     const team = await dbapi.createTeam(teamName, groups, users)
     return apiutil.respond(res, 200, 'Team info (created)', {team: publishTeam(team)})
 }
 
-export {getTeamById, createTeam}
+async function updateTeam(req, res) {
+    const teamId = req.params.id
+    let users = req.body.users
+    let groups = req.body.groups
+    let name = req.body.name
+
+    let team = await dbapi.getTeamById(teamId)
+    if (!team) {
+        apiutil.respond(res, 400, 'Not Found')
+    }
+
+    if (!users) {
+        users = []
+    }
+    if (!groups) {
+        groups = []
+    }
+
+    for (const user of users) {
+        await dbapi.addUserToTeam(teamId, user)
+    }
+    for (const group of groups) {
+        await dbapi.addGroupToTeam(teamId, group)
+    }
+
+    if (name) {
+        await dbapi.updateTeamName(teamId, name)
+    }
+
+    team = await dbapi.getTeamById(teamId)
+    apiutil.respond(res, 200, 'Team info', {team: publishTeam(team)})
+}
+
+
+export {getTeamById, createTeam, updateTeam}
 export default {
     getTeamById: getTeamById,
     createTeam: createTeam,
+    updateTeam: updateTeam,
 }
