# lib/units/api/swagger/api_v1.yaml
@@ -3488,7 +3488,48 @@ paths:
               schema:
                 $ref: '#/components/schemas/UnexpectedErrorResponse'
     x-swagger-router-controller: teams
-
+    put:
+      tags:
+        - teams
+      summary: Put users or groups to team
+      description: Put users or groups to team
+      operationId: updateTeam
+      parameters:
+        - name: id
+          in: path
+          description: Team identifier
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: fields need to be updated
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TeamPayload'
+          application/octet-stream:
+            schema:
+              $ref: '#/components/schemas/TeamPayload'
+        required: true
+      responses:
+          "200":
+            description: Team information
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/TeamResponse'
+          default:
+            description: |
+              Unexpected Error:
+                * 401: Unauthorized => bad credentials
+                * 400: Team with this name already exists
+                * 500: Internal Server Error
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/UnexpectedErrorResponse'
+      x-codegen-request-body-name: team
+      x-swagger-router-controller: teams
 components:
   schemas:
     UnexpectedErrorResponse:
